fix filter arrangement, space and alignment

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,7 @@
 .content {
   position: relative;
 }
+
 .height100 {
   height: 100%;
 }
@@ -11,4 +12,7 @@
 
 .body-container {
   padding-top: 48px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
