--- a/src/app/containers/filter-container/filter-container.component.scss
+++ b/src/app/containers/filter-container/filter-container.component.scss
@@ -7,6 +7,7 @@
 
 .button-container {
   flex: 1;
+  margin: 0 0.125em 0 0.125em;
 }
 
 .filter-host-container {
